[gd_scene load_steps=8 format=3 uid="uid://dmapx641vhxvb"]

[ext_resource type="Texture2D" uid="uid://3l3sfo4mm6dv" path="res://assets/background_texture.png" id="1_dxhov"]
[ext_resource type="Script" path="res://scripts/arena_elements/arena.gd" id="1_kgwpv"]
[ext_resource type="PackedScene" uid="uid://clqg4087okeku" path="res://scenes/arena_elements/wall.tscn" id="2_qdefj"]
[ext_resource type="Script" path="res://scripts/arena_elements/team_spawn.gd" id="4_c8l03"]
[ext_resource type="PackedScene" uid="uid://ghcdqc2x32iq" path="res://scenes/arena_elements/player_spawn.tscn" id="5_704cw"]
[ext_resource type="PackedScene" uid="uid://d2txevqxb22ks" path="res://scenes/arena_elements/goal.tscn" id="6_m5jov"]
[ext_resource type="PackedScene" uid="uid://c5skyjglj3g2q" path="res://scenes/arena_elements/ball_spawn.tscn" id="7_bqeyu"]

[node name="arena_training" type="Node2D"]
z_index = -1
script = ExtResource("1_kgwpv")
arena_name = "Training Grounds"

[node name="background" type="Sprite2D" parent="."]
position = Vector2(578.5, 319.75)
scale = Vector2(18.7344, 10.8828)
texture = ExtResource("1_dxhov")

[node name="walls" type="Node2D" parent="."]

[node name="wall" parent="walls" instance=ExtResource("2_qdefj")]
position = Vector2(578, -14)
scale = Vector2(37.5, 0.873)

[node name="wall2" parent="walls" instance=ExtResource("2_qdefj")]
position = Vector2(1165, 322)
rotation = -3.14159
scale = Vector2(-0.809729, 20.3436)

[node name="wall3" parent="walls" instance=ExtResource("2_qdefj")]
position = Vector2(578, 658)
scale = Vector2(37.5, 0.873)

[node name="team_spawns" type="Node2D" parent="."]

[node name="TeamSpawn" type="Node2D" parent="team_spawns"]
script = ExtResource("4_c8l03")

[node name="player_spawn" parent="team_spawns/TeamSpawn" instance=ExtResource("5_704cw")]
position = Vector2(22, 317)
faced_direction = 3

[node name="goal" parent="team_spawns/TeamSpawn" instance=ExtResource("6_m5jov")]
position = Vector2(-33, 324)
scale = Vector2(1.16675, 32.4034)

[node name="ball_spawns" type="Node2D" parent="."]

[node name="ball_spawn" parent="ball_spawns" instance=ExtResource("7_bqeyu")]
position = Vector2(662, 308)
